# bs-cordl

./: .gitignore  CMakeLists.txt  README.md  generate.ps1  qpm.json  qpm.shared.json  types.json
.github/workflows/: build-ndk.yml
cmake/: quest.cmake
include/: version.txt
include/AOT/: AOT.hpp  MonoPInvokeCallbackAttribute.hpp  zzzz__MonoPInvokeCallbackAttribute_def.hpp  zzzz__MonoPInvokeCallbackAttribute_impl.hpp
include/BeatmapDataLoaderVersion2_6_0AndEarlier/: BeatmapDataLoader.hpp  BeatmapDataLoaderVersion2_6_0AndEarlier.hpp  zzzz__BeatmapDataLoader_def.hpp  zzzz__BeatmapDataLoader_impl.hpp
include/BeatmapDataLoaderVersion3/: BeatmapDataLoader.hpp  BeatmapDataLoaderVersion3.hpp  zzzz__BeatmapDataLoader_def.hpp  zzzz__BeatmapDataLoader_impl.hpp
include/BeatmapDataLoaderVersion4/: ArcItemConverter.hpp  BasicEventItemConverter.hpp  BeatmapDataLoader.hpp  BeatmapDataLoaderVersion4.hpp  BeatmapLevelSaveDataUtils.hpp  BombNoteItemConverter.hpp  BpmEventConverter.hpp  ChainItemConverter.hpp  ColorBoostEventItemConverter.hpp  ColorNoteItemConverter.hpp  EventBoxGroupConverter.hpp  FloatFxBaseDataConverter.hpp  FloatFxEventBoxGroupConverter.hpp  IndexFilterConverter.hpp  LightColorBaseDataConverter.hpp  LightColorEventBoxGroupConverter.hpp  LightRotationBaseDataConverter.hpp  LightRotationEventBoxGroupConverter.hpp  LightTranslationBaseDataConverter.hpp  LightTranslationEventBoxGroupConverter.hpp  NjsEventConverter.hpp  ObstacleItemConverter.hpp  SpawnRotationItemConverter.hpp  SpecialEventsFilter.hpp  WaypointItemConverter.hpp  zzzz__ArcItemConverter_def.hpp  zzzz__ArcItemConverter_impl.hpp  zzzz__BasicEventItemConverter_def.hpp  zzzz__BasicEventItemConverter_impl.hpp  zzzz__BeatmapDataLoader_def.hpp  zzzz__BeatmapDataLoader_impl.hpp  zzzz__BeatmapLevelSaveDataUtils_def.hpp  zzzz__BeatmapLevelSaveDataUtils_impl.hpp  zzzz__BombNoteItemConverter_def.hpp  zzzz__BombNoteItemConverter_impl.hpp  zzzz__BpmEventConverter_def.hpp  zzzz__BpmEventConverter_impl.hpp  zzzz__ChainItemConverter_def.hpp  zzzz__ChainItemConverter_impl.hpp  zzzz__ColorBoostEventItemConverter_def.hpp  (+33 more)
include/BeatmapEditor3D/: BeatmapEditor3D.hpp  (+3 more)
test/: unityw.cpp
(+47500 files in other folders)
